# Flet-Template

./: .gitignore  README.md  app.db  main.py  pyproject.toml  qa.db  requirements.txt  version.txt
app/component/: CustomAppBar.py  KeywordMappingEditor.py  SearchableSelect.py  SystemSettingsDialog.py  ThemeManager.py  TrayIconManager.py  example_dialog.py
app/config/: config.py  database.py  global_config.py  qa.db  settings.toml
app/db/: models.py
app/repository/: example_repository.py  system_config_repository.py
app/tasks/: SchedulerManager.py
app/utils/: dialog.py  file_utils.py  log_utils.py  notifications.py  response_util.py
app/view/: app_view.py  base_view.py  basic_components_view.py  data_components_view.py  example_view.py  favorites_view.py  feedback_components_view.py  form_components_view.py  home_view.py  layout_components_view.py  settings_view.py  task_view.py
app/viewmodel/: app_viewmodel.py  example_viewmodel.py  system_config_viewmodel.py
